# generic-web-ui-ta

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
.github/workflows/: ci.yml
src/config/: settings.py
src/core/: builder.py  logging.py  wait_strategies.py
src/pages/: base_page.py  cart_page.py  checkout_info_page.py  inventory_page.py  login_page.py
src/services/: user_flows.py
tests/: conftest.py  test_checkout_smoke.py  test_login.py
